Added link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
             </div>
           </div>
         </div>
+        <div class="card-body text-center">
+          <a href="https://github.com/Mari4ka89/weather-app" target="_blank">
+            Open-source code
+          </a>
+          by Mariia Bezrukava
+        </div>
       </div>
     </div>
     <script src="src/index.js"></script>
