Updated code formatting

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         </div>
         <div class="card-body text-center">
           <a href="https://github.com/Mari4ka89/weather-app" target="_blank">
-            Open-source code
-          </a>
+            Open-source code</a
+          >
           by Mariia Bezrukava
         </div>
       </div>
