Added Celsius to Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
               <img src="" alt="" id="icon" />
               <div>
                 <span id="temperature" class="temperature"></span>
-                <div class="scale">
-                  <a href="#" class="disabled text-decoration-none" id="celsius"
+                <span class="scale">
+                  <a href="#" class="active text-decoration-none" id="celsius"
                     >°C</a
                   >
                   |
                   <a
                     href="#"
                     class="fahrenheit text-decoration-none"
-                    id="fahrengeit"
+                    id="fahrenheit"
                     >°F</a
                   >
-                </div>
+                </span>
               </div>
             </div>
             <ul class="col-3">
