Removed forecast layout with fake data

--- a/index.html
+++ b/index.html
@@ -79,56 +79,15 @@
               </ul>
             </div>
           </div>
-          <div class="row pt-3">
-            <div class="col-2">
-              <div class="text-center text-uppercase">Fri</div>
-              <div class="text-center fs-1">🌧️</div>
-              <div class="text-center">
-                <span class="fw-bold">26°</span>/20°
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="text-center text-uppercase">Sat</div>
-              <div class="text-center fs-1">🌧️</div>
-              <div class="text-center">
-                <span class="fw-bold">22°</span>/20°
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="text-center text-uppercase">Sun</div>
-              <div class="text-center fs-1">🌧️</div>
-              <div class="text-center">
-                <span class="fw-bold">17°</span>/13°
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="text-center text-uppercase">Mon</div>
-              <div class="text-center fs-1">⛅</div>
-              <div class="text-center">
-                <span class="fw-bold">21°</span>/18°
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="text-center text-uppercase">Tue</div>
-              <div class="text-center fs-1">🌤️</div>
-              <div class="text-center">
-                <span class="fw-bold">23°</span>/20°
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="text-center text-uppercase">Wed</div>
-              <div class="text-center fs-1">☀️</div>
-              <div class="text-center">
-                <span class="fw-bold">25°</span>/20°
-              </div>
-            </div>
-          </div>
         </div>
         <div class="card-body text-center">
           <a href="https://github.com/Mari4ka89/weather-app" target="_blank">
             Open-source code</a
           >
-          by Mariia Bezrukava
+          by Mariia Bezrukava which is
+          <a href="https://lucent-strudel-ec4419.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </div>
       </div>
     </div>
