Added weekly weather forecast display

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
               </ul>
             </div>
           </div>
+          <div class="row pt-3 forecast" id="forecast"></div>
         </div>
         <div class="card-body text-center">
           <a href="https://github.com/Mari4ka89/weather-app" target="_blank">
