--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </button>
             </div>
           </form>
-          <div class="row weather-now">
+          <div class="row weather-now pt-2">
             <div class="col-5 d-flex">
               <img src="" alt="" id="icon" />
               <div>
@@ -79,7 +79,7 @@
               </ul>
             </div>
           </div>
-          <div class="row pt-3 forecast" id="forecast"></div>
+          <div class="row pt-4 forecast" id="forecast"></div>
         </div>
         <div class="card-body text-center">
           <a href="https://github.com/Mari4ka89/weather-app" target="_blank">
