Removed unit conversion

--- a/index.html
+++ b/index.html
@@ -53,18 +53,7 @@
               <img src="" alt="" id="icon" />
               <div>
                 <span id="temperature" class="temperature"></span>
-                <span class="scale">
-                  <a href="#" class="active text-decoration-none" id="celsius"
-                    >°C</a
-                  >
-                  |
-                  <a
-                    href="#"
-                    class="fahrenheit text-decoration-none"
-                    id="fahrenheit"
-                    >°F</a
-                  >
-                </span>
+                <span class="scale">°C</span>
               </div>
             </div>
             <ul class="col-3">
